# operating-system-project

./: .gitignore  Cargo.toml  Justfile  README.md  bochs-config.txt  grub.cfg  i686-unknown-none.json  linker-script.ld
src/: assembly.s  gdt.rs  idt.rs  input.rs  lib.rs  main.rs  page_table.rs  terminal.rs  tss.rs  vga_text.rs
