[package]
name = "operating-system-project"
version = "0.1.0"
authors = ["Juuso Tuononen <jutuon@outlook.com>"]
edition = "2018"
publish = false

[dependencies]
pc-at-pic8259a = { git = "https://github.com/jutuon/pic8259", rev = "6d278c12743f2e4241585ff5cf8ed390457e4007" }
ps2-controller-x86 = { path = "../ps2-controller-x86" }

# Crates.io
vga-framebuffer = "0.7.4"
volatile = "0.2.5"
x86 = "0.12.0"
seq-macro = "0.1.2"
arraydeque = { version = "0.4", default-features = false }
arrayvec = { version = "0.4.10", default-features = false, features = ["array-sizes-33-128"] }
bitflags = "1.0.4"
